Agregar configuración inicial y lógica de minería en minero.js; actualizar dependencias en package.json y package-lock.json

--- a/lead-engine/package.json
+++ b/lead-engine/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/MarcoBarzola22/sistema-agro-leads#readme",
   "dependencies": {
+    "apify-client": "^2.22.0",
     "dotenv": "^17.2.4",
     "pg": "^8.18.0",
     "puppeteer": "^24.37.2"
